fixed icon hover in non dark mode

--- a/src/styles/home/Separator.module.css
+++ b/src/styles/home/Separator.module.css
@@ -66,7 +66,8 @@ body {
   padding: 0 0.25rem;
 }
 
-[dark-theme="dark"] .iconLink {
+[dark-theme="dark"] .iconLink,
+.icon {
   color: var(--hover-color);
 }
 
@@ -77,13 +78,19 @@ body {
 }
 
 [dark-theme="dark"] .iconLink:hover,
-.iconLink:hover .icon {
+[dark-theme="dark"] .iconLink:hover .icon {
   color: var(--white-text-color);
+  transform: scale(1.1);
 }
 
 .icon {
   margin-right: 0.4rem;
   font-size: 1.25rem;
+  color: var(--nav-color);
+}
+
+[dark-theme="dark"] .icon {
+  color: var(--hover-color);
 }
 
 .modalOverlay {
